--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@ pytz>=2023.3
 httpx>=0.25.0
 
 # Pipecat and extras for FastAPI websockets, Deepgram STT, ElevenLabs TTS, OpenAI LLM, Silero VAD
-pipecat-ai[websocket,deepgram,elevenlabs,openai,silero]>=0.0.80
+pipecat-ai[websocket,deepgram,elevenlabs,openai,silero,mem0]>=0.0.85
 openai>=1.40.0
-# Use Mem0 OSS from GitHub (PyPI name not available / not 3.13-ready)
-git+https://github.com/mem0ai/mem0.git@main#egg=mem0
-qdrant-client>=1.7.3
+mem0ai>=0.1.0
