Implement Firebase integration with nested collection structure
- Replace Mem0 memory system with Firebase Firestore
- Implement nested structure: users/{user_id}/conversations/{character_name}/messages/{message_id}
- Use 'meher' as character name and phone number as user_id
- Save both WhatsApp text and voice conversation transcripts
- Add conversation metadata with message counts and timestamps
- Include conversation_type field in each message (text/voice)
- Add Firebase setup documentation
- Update requirements.txt with firebase-admin dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ pytz>=2023.3
 httpx>=0.25.0
 
 # Pipecat and extras for FastAPI websockets, Deepgram STT, ElevenLabs TTS, OpenAI LLM, Silero VAD
-pipecat-ai[websocket,deepgram,elevenlabs,openai,silero,mem0]>=0.0.85
+pipecat-ai[websocket,deepgram,elevenlabs,openai,silero]>=0.0.85
 openai>=1.40.0
-mem0ai>=0.1.0
+firebase-admin>=6.4.0
